Build and test fixes (#6)
* Mess of changes that seems to work

* Minimize some changes

* Fixes to build.gradle and justfile

* Add back pre-existing justfile targets

* Update gradle protobuf plugin

* Minimize diff

* Refactor and share pcodeextractor path in tests

* Cleaning up changes

* Minimize diffs

* Add pre-requisite dependencies to README

* Fixes for SADIE tests with extra script paths in analyzer